--- a/public/style/app.css
+++ b/public/style/app.css
@@ -24,6 +24,10 @@ a:hover {
   display: inline-block;
 }
 
+.block {
+  display: block;
+}
+
 .padding-null {
   padding: 0;
 }
@@ -46,15 +50,15 @@ a:hover {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.font-serif {
+  font-family: Times, Georgia, serif;
+}
+
 .box-shadow {
   background-color: #fff;
   -webkit-border-radius: 5px;
   border-radius: 5px;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-}
-
-.font-serif {
-  font-family: Times, Georgia, serif;
 }
 
 .sidebar-chunk {
@@ -307,6 +311,84 @@ a:hover {
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+/* 动画样式 */
+@keyframes fadeInLeft20 {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(-20%, 0, 0);
+    transform: translate3d(-20%, 0, 0);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+.fadeInLeft20 {
+  -webkit-animation-name: fadeInLeft20;
+  animation-name: fadeInLeft20;
+}
+
+@keyframes fadeInLeft30 {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(-30%, 0, 0);
+    transform: translate3d(-30%, 0, 0);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+.fadeInLeft30 {
+  -webkit-animation-name: fadeInLeft30;
+  animation-name: fadeInLeft30;
+}
+/*------------------------------------*\
+    背景空荡时使用,结合JS
+\*------------------------------------*/
+canvas#evanyou {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+/*------------------------------------*\
+    右侧固定  侧边栏开关,返回顶层按钮
+\*------------------------------------*/
+.sidebar-toggle {
+  position: fixed;
+  z-index: 24;
+  bottom: 40px;
+  right: 50px;
+  color: #5d513c;
+}
+
+.back-to-top {
+  color: white;
+  font-size: 12px;
+  background-color: #777;
+  height: 28px;
+  width: 28px;
+  line-height: 28px;
+  text-align: center;
+  outline: none;
+  cursor: pointer;
+  border-radius: 50%;
+  position: fixed;
+  z-index: 24;
+  bottom: 35px;
+  right: 70px;
+  transition: background 0.6s ease-out 0s;
+}
+.back-to-top:hover {
+  background-color: #5e5e5e;
 }
 
 /*------------------------------------*\
@@ -620,50 +702,6 @@ a:hover {
 }
 
 /*------------------------------------*\
-    背景空荡时使用,结合JS
-\*------------------------------------*/
-canvas#evanyou {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
-
-/*------------------------------------*\
-    右侧固定  侧边栏开关,返回顶层按钮
-\*------------------------------------*/
-.sidebar-toggle {
-  position: fixed;
-  z-index: 24;
-  bottom: 40px;
-  right: 50px;
-  color: #5d513c;
-}
-
-.back-to-top {
-  color: white;
-  font-size: 12px;
-  background-color: #777;
-  height: 28px;
-  width: 28px;
-  line-height: 28px;
-  text-align: center;
-  outline: none;
-  cursor: pointer;
-  border-radius: 50%;
-  position: fixed;
-  z-index: 24;
-  bottom: 35px;
-  right: 70px;
-  transition: background 0.6s ease-out 0s;
-}
-.back-to-top:hover {
-  background-color: #5e5e5e;
-}
-
-/*------------------------------------*\
     文章详细页
 \*------------------------------------*/
 .editormd-html-preview {
@@ -949,4 +987,375 @@ canvas#evanyou {
 .category-tag-content .tag-cloud {
   padding: 0 50px;
   line-height: 60px;
+}
+
+/*------------------------------------*\
+  jQuery-Sidebar插件所需样式
+\*------------------------------------*/
+html, body {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
+
+html, body, .jqsb-container, .jqsb-sidebar {
+  min-height: 100%;
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.jqsb-container {
+  position: relative;
+  z-index: 1;
+}
+
+.jqsb-sidebar {
+  overflow-y: auto;
+  position: fixed;
+  top: 0;
+  z-index: 0;
+  background-color: #333333;
+  color: #f2f2f2;
+}
+
+.jqsb-left {
+  left: 0;
+}
+
+.jqsb-right {
+  right: 0;
+}
+
+.jqsb-left .jqsb-left-sm {
+  float: left;
+}
+
+.jqsb-right .jqsb-right-sm {
+  float: right;
+}
+
+.jqsb-left .jqsb-left-bg, .jqsb-right .jqsb-right-bg {
+  clear: both;
+}
+
+.sidebar-mode {
+  z-index: 9999;
+}
+
+/*---------------------------*\
+  metisMenu插件所需样式
+\*---------------------------*/
+.metismenu .arrow {
+  float: right;
+  line-height: 1.42857;
+}
+
+*[dir="rtl"] .metismenu .arrow {
+  float: left;
+}
+
+.metismenu .glyphicon.arrow:before {
+  content: "\e079";
+}
+
+.metismenu .active > a > .glyphicon.arrow:before {
+  content: "\e114";
+}
+
+.metismenu .fa.arrow:before {
+  content: "\f104";
+}
+
+.metismenu .active > a > .fa.arrow:before {
+  content: "\f107";
+}
+
+.metismenu .ion.arrow:before {
+  content: "";
+}
+
+.metismenu .active > a > .ion.arrow:before {
+  content: "\f3d0";
+}
+
+.metismenu .plus-times {
+  float: right;
+}
+
+*[dir="rtl"] .metismenu .plus-times {
+  float: left;
+}
+
+.metismenu .fa.plus-times:before {
+  content: "\f067";
+}
+
+.metismenu .active > a > .fa.plus-times {
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.metismenu .plus-minus {
+  float: right;
+}
+
+*[dir="rtl"] .metismenu .plus-minus {
+  float: left;
+}
+
+.metismenu .fa.plus-minus:before {
+  content: "\f067";
+}
+
+.metismenu .active > a > .fa.plus-minus:before {
+  content: "\f068";
+}
+
+.metismenu .collapse {
+  display: none;
+}
+
+.metismenu .collapse.in {
+  display: block;
+}
+
+.metismenu .collapsing {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+  -webkit-transition-timing-function: ease;
+  -o-transition-timing-function: ease;
+  transition-timing-function: ease;
+  -webkit-transition-duration: .35s;
+  -o-transition-duration: .35s;
+  transition-duration: .35s;
+  -webkit-transition-property: height, visibility;
+  -o-transition-property: height, visibility;
+  transition-property: height, visibility;
+}
+
+/*------------------------------------*\
+    基础样式样式 &website
+\*------------------------------------*/
+/*------------------------------------*\
+    导航栏样式 &navbar
+\*------------------------------------*/
+.navbar {
+  margin-bottom: 0;
+}
+
+.navbar-site {
+  border-radius: 0;
+  border: 0;
+  border-bottom: 1px solid #dcdce0;
+  background-color: #f7f7f8;
+}
+.navbar-site a, .navbar-site .navbar-nav > li > a {
+  font-weight: 600;
+  color: #a7b1c2;
+}
+.navbar-site .navbar-nav > .open > a,
+.navbar-site .navbar-nav > .open > a:focus,
+.navbar-site .navbar-nav > .open > a:hover {
+  color: #7d7d8d;
+  background-color: #e9e9ec;
+}
+.navbar-site .navbar-toggle {
+  border-color: #dcdce0;
+}
+.navbar-site .navbar-toggle:hover {
+  background-color: #dcdce0;
+}
+.navbar-site .navbar-toggle .icon-bar {
+  background-color: #9898a5;
+}
+.navbar-brand span {
+  color: #293038;
+}
+
+/*------------------------------------*\
+    侧边栏样式 &sidebar
+\*------------------------------------*/
+.item-list, .sm-item-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+.item-list > li > a, .sm-item-list > li > a {
+  position: relative;
+  display: block;
+  padding: 15px;
+}
+.item-list > li > a:focus, .sm-item-list > li > a:focus {
+  color: #fff;
+  background-color: #343d47;
+  text-decoration: none;
+}
+.item-list > li > a:hover, .sm-item-list > li > a:hover {
+  color: #fff;
+  background-color: #343d47;
+  text-decoration: none;
+}
+
+.jqsb-left {
+  background-color: #293038;
+  overflow-x: hidden;
+}
+.jqsb-left::-webkit-scrollbar {
+  width: 3px;
+  height: 3px;
+}
+.jqsb-left::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #F5F5F5;
+}
+.jqsb-left::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #FF5722;
+}
+.jqsb-left-bg {
+  width: 180px;
+}
+.metismenu {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+.metismenu a {
+  color: #a7b1c2;
+  font-size: 13px;
+  font-weight: 600;
+}
+.item-list {
+  text-indent: 30px;
+}
+.item-link {
+  position: relative;
+  display: block;
+  padding: 15px;
+  background-color: #252b32;
+}
+.item-link:focus {
+  color: #fff;
+  background-color: #252b32;
+  text-decoration: none;
+}
+.item-link:hover {
+  color: #fff;
+  background-color: #252b32;
+  text-decoration: none;
+}
+.item-link > i {
+  font-size: 10px;
+  margin-right: 10px;
+}
+.user-info {
+  padding: 25px 0 15px 15px;
+}
+.user-portrait {
+  display: block;
+  max-width: 40%;
+  height: auto;
+  margin-bottom: 8px;
+}
+.user-info-dropdown {
+  position: relative;
+}
+.jqsb-left-sm {
+  width: 70px;
+}
+.sm-item-list > li > a {
+  color: #a7b1c2;
+  font-size: 16px;
+  padding: 12px 18px;
+  text-align: center;
+}
+.sm-item-list .personal-icon > a {
+  background-color: #3a4450;
+  line-height: 50px;
+  padding: 0;
+  vertical-align: middle;
+}
+.sm-item-list .personal-icon > a > img {
+  width: 30px;
+}
+.sidebar-tooltip .tooltip-inner {
+  max-width: 200px;
+  padding: 0 10px;
+  color: #fff;
+  text-align: center;
+  background-color: rgba(52, 61, 71, 0.95);
+  border-radius: 0;
+  line-height: 46px;
+  font-weight: 600;
+}
+.sidebar-tooltip .tooltip.top .tooltip-arrow {
+  border-top-color: #343d47;
+}
+.sidebar-tooltip .tooltip.top-left .tooltip-arrow {
+  border-top-color: #343d47;
+}
+.sidebar-tooltip .tooltip.top-right .tooltip-arrow {
+  border-top-color: #343d47;
+}
+.sidebar-tooltip .tooltip.right .tooltip-arrow {
+  border-right-color: #343d47;
+}
+.sidebar-tooltip .tooltip.left .tooltip-arrow {
+  border-left-color: #343d47;
+}
+.sidebar-tooltip .tooltip.bottom .tooltip-arrow {
+  border-bottom-color: #343d47;
+}
+.sidebar-tooltip .tooltip.bottom-left .tooltip-arrow {
+  border-bottom-color: #343d47;
+}
+.sidebar-tooltip .tooltip.bottom-right .tooltip-arrow {
+  border-bottom-color: #343d47;
+}
+
+#pjax-container {
+  height: calc(100vh - 81px);
+  overflow: auto;
+  padding: 20px;
+  background-color: #f7f7f7;
+}
+
+.editormd-fullscreen {
+  z-index: 1024;
+}
+
+.footer {
+  height: 30px;
+  line-height: 30px;
+  text-align: right;
+  background-color: #fcfcfc;
+  border-top: 1px solid #e6e6e6;
+  font-size: 10px;
+}
+
+.shift-trash {
+  display: inline-block;
+  height: 30px;
+  line-height: 30px;
+}
+
+.nav-title {
+  margin: 0 0 22px;
+}
+
+.atc-tit-ipt {
+  margin-bottom: 15px;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+}
+
+.toast-close-button {
+  line-height: 20px;
 }
